# e-e-paper

./: CMakeLists.txt  README.md  index.md  partitions.csv  sdkconfig
docs/: Gemfile  _config.yml  build.md  config.md  hardware.md  index.md  user_guide.md
hardware/eepaper/: eepaper.kicad_pcb  eepaper.kicad_pro  eepaper.kicad_sch
hardware/eepaper/symbols/: 105162-0001.kicad_mod  105162-0001.lib  ESP32-C3-WROOM-02-H4.lib  FFC2B28-24-G.lib  GCT_FFC2B28-24-G.kicad_mod  GCT_USB4105-GF-A.kicad_mod  JS202011JAQN.kicad_mod  JS202011JAQN.lib  JST_S2B-PH-SM4-TB(LF)(SN).kicad_mod  MODULE_ESP32-C3-WROOM-02-H4.kicad_mod  SW_TL3305AF260QG.kicad_mod  SW_TL3315NF100Q.kicad_mod  TL3305AF260QG.lib  TL3315NF100Q.lib  Untitled.kicad_mod  project_symbols.bak  project_symbols.kicad_sym
hardware/v1/: eepaper_bom_v1.csv
main/: CMakeLists.txt  bluetooth_task.c  bluetooth_task.h  display_buffer.c  display_buffer.h  display_task.c  epaper_display_main.c  wifi_task.c  wifi_task.h
main/font/: font.h  fonts.c  fonts.h
src/: CMakeLists.txt  display_task.c  display_task.h  epaper_display_main.c  epaper_display_main.h  epaper_display_simulator_main.c  wifi_task.c  wifi_task.h
src/apps/: CMakeLists.txt  apps.h
src/apps/clock/: CMakeLists.txt  clock_app.c  clock_app.h
src/apps/message_box/: CMakeLists.txt  message_box_app.c  message_box_app.h
src/display/: CMakeLists.txt  display_buffer.c  display_buffer.h  display_draw_geometry.c  display_draw_geometry.h  display_draw_image.c  display_draw_image.h  display_draw_text.c  display_draw_text.h  display_toml.c  display_toml.h
src/font/: CMakeLists.txt  font.h  fonts.c  fonts.h  test_font.h
src/font/headers/: bitter-ht-10.h  bitter-ht-14.h  bitter-ht-16.h  bitter-ht-20.h  bitter-ht-24.h  bitter-ht-32.h  bitter-ht-40.h  bitter-ht-48.h  new-york-10.h  new-york-12.h  new-york-14.h  new-york-18.h  new-york-20.h  new-york-24.h  new-york-36.h  system_symbols.h
src/font/images/: epaper_custom_symbols.toml  epaper_display_symbols.yaml
src/font/tools/: epaper_display_symbols.yaff  images_to_yaff.py  yaff_to_fbin.py  yaff_to_header.py
src/font/yaff/: bitter-ht-10.yaff  bitter-ht-14.yaff  bitter-ht-16.yaff  bitter-ht-20.yaff  bitter-ht-24.yaff  bitter-ht-32.yaff  bitter-ht-40.yaff  bitter-ht-48.yaff  system_symbols.yaff
src/freertos/: CMakeLists.txt
src/freertos/Posix/: port.c
src/freertos/include/: FreeRTOSConfig.h
src/hw/: CMakeLists.txt  cryptography_hal.h  cryptography_hal_esp32c.c  cryptography_hal_simulator.c  epaper_hal.h  epaper_hal_definitions.h  epaper_hal_esp32c.c  epaper_hal_simulator.c  filesystem_hal.h  filesystem_hal_esp32c_sd.c  filesystem_hal_simulator.c  hal_simulator.c  i2s_microphone_hal.h  i2s_microphone_hal_esp32c.c  i2s_speaker_hal.h  i2s_speaker_hal_esp32c.c  init_hal.h  init_hal_esp32c.c  init_hal_simulator.c  time_hal.h  time_hal_esp32c.c  time_hal_simulator.c  wifi_hal.h  wifi_hal_esp32c.c  wifi_hal_simulator.c
src/hw/epapers/: 2p9inch_296x128_bw.c  2p9inch_296x128_bw.h  7p5inch_800x480_bw.c  7p5inch_800x480_bw.h  epapers.c  epapers.h
src/hw/simulator_filesystem/: config.toml  message_box.toml  startup.toml
src/hw/simulator_filesystem/sd/: config.toml  custom_font.fbin  key_uuid.toml  message_box.toml  startup.toml
src/hw/simulator_filesystems/demo_connected/sd/: startup.toml
src/hw/simulator_filesystems/demo_standalone/sd/: startup.toml
src/lib/: CMakeLists.txt
src/lib/tomlc99/: CMakeLists.txt  toml.c  toml.h
src/render/: CMakeLists.txt  render_toml.c  render_toml.h
src/utils/: CMakeLists.txt  base64.c  base64.h  file_utils.c  file_utils.h  font_resources.c  font_resources.h  jwt.c  jwt.h  resources.c  resources.h  toml_resources.c  toml_resources.h
src/utils/resources/: CMakeLists.txt  clock_resources.c  clock_resources.h  font_resources.c  font_resources.h  resources.c  resources.h  system_resources.c  system_resources.h  toml_resources.c  toml_resources.h
